# phoenix-market-maker

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  ws_ping.py
notebooks/: book-dashboard.ipynb  fill-dashboard.ipynb  orderbook-analysis.ipynb  trade-analysis.ipynb  trade_analysis.ipynb  utils.py
src/: lib.rs  network_utils.rs  phoenix_utils.rs  utils.rs
src/exchanges/: kraken.rs  mod.rs  okx.rs  phoenix.rs  phoenix_fill.rs
