[package]
name = "phoenix-market-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "src/bin/example.rs"

[[bin]]
name = "track"
path = "src/bin/track.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
phoenix-sdk = "0.5.1"
phoenix-v1 = "0.2.4"
shellexpand = "3.1.0"
solana-cli-config = "1.14.7"
solana-program = "1.14.9"
solana-sdk = "1.14.9"
spl-associated-token-account = { version = "1.1.1", features = [
    "no-entrypoint",
] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = "^1.0.63"
reqwest = "0.11.14"
serde_json = "1.0.94"
bincode = "1.3.3"
generic-token-faucet = "0.1.2"
dotenvy = "0.15.7"
