[package]
name = "phoenix-market-maker"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
bincode = "1.3.3"
bytemuck = "1.13.0"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
futures = "0.3.30"
generic-token-faucet = "0.1.2"
itertools = "0.12.1"
phoenix-sdk = "0.5.1"
phoenix-v1 = { version = "0.2.4", features = ["no-entrypoint"] }
reqwest = "0.11.14"
serde = "^1.0.63"
serde_json = "1.0.94"
shellexpand = "3.1.0"
solana-cli-config = "1.14.7"
solana-client = "1.10.32"
solana-program = "1.14.9"
solana-sdk = "1.14.9"
spl-associated-token-account = { version = "1.1.1", features = [
    "no-entrypoint",
] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
zstd = "0.13.0"
